--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "pdfkit": "^0.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "mongodb-memory-server": "^9.1.1"
   }
 }
