--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Frontend Production Environment
-VITE_API_URL=https://react-backend-3sof.onrender.com
+VITE_API_URL=https://react-backend-3sof.onrender.com/api
 VITE_NODE_ENV=production
